# uknocs

./: LICENSE  README.md  meson.build
docs/: build.rst  conf.py  index.rst  meson.build  operating-systems.rst  requirements.txt  yocto-project.rst
docs/operating-systems/examples/: vas-with-c.rst
docs/operating-systems/knowledge/: debug.rst  virtual-address-space.rst
docs/sphinx-static/: theme_overrides.css
docs/yocto-project/examples/: create-custom-layer.rst  getting-started.rst  selecting-base-utils.rst  selecting-init-system.rst  simple-build.rst  writing-first-recipe.rst
docs/yocto-project/knowledge/: bitbake-classes.rst  override-strategies.rst  overview.rst  recipe-writing.rst
