# Core docs
docs_src = [
  'docs/build.rst',
  'docs/index.rst',
  'docs/operating-systems.rst',
  'docs/yocto-project.rst',
]

# Yocto Project section specific docs
docs_src += [
  'docs/yocto-project/knowledge/overview.rst',
  'docs/yocto-project/examples/simple-build.rst',
]

# Operating Systems section specific docs
docs_src += [
  'docs/operating-systems/knowledge/virtual-address-space.rst',
  'docs/operating-systems/examples/vas-with-c.rst',
]
