# Core docs
docs_src = [
  'docs/build.rst',
  'docs/index.rst',
  'docs/operating-systems.rst',
  'docs/yocto-project.rst',
]

#######################################
# Yocto Project section specific docs #
#######################################

# Knowledge
docs_src += [
  'docs/yocto-project/knowledge/overview.rst',
  'docs/yocto-project/knowledge/recipe-writing.rst',
  'docs/yocto-project/knowledge/bitbake-classes.rst',
  'docs/yocto-project/knowledge/override-strategies.rst',
]

# Examples
docs_src += [
  'docs/yocto-project/examples/getting-started.rst',
  'docs/yocto-project/examples/create-custom-layer.rst',
  'docs/yocto-project/examples/selecting-init-system.rst',
  'docs/yocto-project/examples/selecting-base-utils.rst',
  'docs/yocto-project/examples/writing-first-recipe.rst',
]


###########################################
# Operating Systems section specific docs #
###########################################

# Knowledge
docs_src += [
  'docs/operating-systems/knowledge/virtual-address-space.rst',
  'docs/operating-systems/knowledge/debug.rst',
]

# Examples
docs_src += [
  'docs/operating-systems/examples/vas-with-c.rst',
]
